# howdy-cpp

./: howdy.te
howdy-gtk/fedora/: com.github.abuenameh.howdy-gtk.policy  com.github.abuenameh.howdy.policy
howdy-gtk/src/: authsticky.cpp  init.cpp  main.glade  meson.build  onboarding.cpp  tab_models.incl  tab_video.incl  window.cpp
howdy/debian/: postinst  preinst  prerm
howdy/fedora/: howdy.sh  postinst
howdy/src/: compare.cpp  meson.build  models.cpp  models.hpp  rubber_stamps.cpp  rubber_stamps.hpp  snapshot.cpp  snapshot.hpp  utils.hpp  video_capture.cpp  video_capture.hpp
howdy/src/autocomplete/: howdy
howdy/src/cli/: add.cpp  clear.cpp  cli.cpp  config.cpp  disable.cpp  list.cpp  meson.build  remove.cpp  set.cpp  snap.cpp  test.cpp
howdy/src/keyboard/: canonical_names.cpp  canonical_names.hpp  canonical_names.incl  generic.cpp  generic.hpp  keyboard.cpp  keyboard.hpp  keyboard_event.cpp  keyboard_event.hpp  nix_common.cpp  nix_common.hpp  nix_keyboard.cpp  nix_keyboard.hpp
howdy/src/pam/: .gitignore  enter_device.cpp  enter_device.hpp  main.cpp  meson.build
howdy/src/utils/: blocking_queue.hpp  string.hpp
